// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Labels Render empty labels 1`] = `
<div
  class="fd-panel__footer service-list--card__footer"
/>
`;

exports[`Labels Render keeps "TrUe" "showcase 1`] = `
<div
  class="fd-panel__footer service-list--card__footer"
>
  <div
    class="service-list--card__footer__labels"
  >
    <div
      class=""
      style="display:inline"
    >
      <div
        class="sc-ckVGcZ fRGHMA"
      >
        <span
          class="fd-token sc-jKJlTe fEwmSA"
          role="button"
        >
          showcase
        </span>
      </div>
    </div>
  </div>
  <div
    class="service-list--card__footer__labels"
  >
    <div
      class=""
      style="display:inline"
    >
      <div
        class="sc-ckVGcZ fRGHMA"
      >
        <span
          class="fd-token sc-jKJlTe fEwmSA"
          role="button"
        >
          random
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Labels Render keeps "true" "showcase 1`] = `
<div
  class="fd-panel__footer service-list--card__footer"
>
  <div
    class="service-list--card__footer__labels"
  >
    <div
      class=""
      style="display:inline"
    >
      <div
        class="sc-ckVGcZ fRGHMA"
      >
        <span
          class="fd-token sc-jKJlTe fEwmSA"
          role="button"
        >
          showcase
        </span>
      </div>
    </div>
  </div>
  <div
    class="service-list--card__footer__labels"
  >
    <div
      class=""
      style="display:inline"
    >
      <div
        class="sc-ckVGcZ fRGHMA"
      >
        <span
          class="fd-token sc-jKJlTe fEwmSA"
          role="button"
        >
          random
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Labels Render no labels 1`] = `
<div
  class="fd-panel__footer service-list--card__footer"
/>
`;

exports[`Labels Render skips "local" 1`] = `
<div
  class="fd-panel__footer service-list--card__footer"
>
  <div
    class="service-list--card__footer__labels"
  >
    <div
      class=""
      style="display:inline"
    >
      <div
        class="sc-ckVGcZ fRGHMA"
      >
        <span
          class="fd-token sc-jKJlTe fEwmSA"
          role="button"
        >
          random
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Labels Render skips "provisionOnlyOnce" 1`] = `
<div
  class="fd-panel__footer service-list--card__footer"
>
  <div
    class="service-list--card__footer__labels"
  >
    <div
      class=""
      style="display:inline"
    >
      <div
        class="sc-ckVGcZ fRGHMA"
      >
        <span
          class="fd-token sc-jKJlTe fEwmSA"
          role="button"
        >
          random
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Labels Render skips empty "connected-app" 1`] = `
<div
  class="fd-panel__footer service-list--card__footer"
>
  <div
    class="service-list--card__footer__labels"
  >
    <div
      class=""
      style="display:inline"
    >
      <div
        class="sc-ckVGcZ fRGHMA"
      >
        <span
          class="fd-token sc-jKJlTe fEwmSA"
          role="button"
        >
          random
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Labels Render skips with not "true" "showcase 1`] = `
<div
  class="fd-panel__footer service-list--card__footer"
>
  <div
    class="service-list--card__footer__labels"
  >
    <div
      class=""
      style="display:inline"
    >
      <div
        class="sc-ckVGcZ fRGHMA"
      >
        <span
          class="fd-token sc-jKJlTe fEwmSA"
          role="button"
        >
          random
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Labels Render value of "connected-app" 1`] = `
<div
  class="fd-panel__footer service-list--card__footer"
>
  <div
    class="service-list--card__footer__labels"
  >
    <div
      class=""
      style="display:inline"
    >
      <div
        class="sc-ckVGcZ fRGHMA"
      >
        <span
          class="fd-token sc-jKJlTe fEwmSA"
          role="button"
        >
          application
        </span>
      </div>
    </div>
  </div>
  <div
    class="service-list--card__footer__labels"
  >
    <div
      class=""
      style="display:inline"
    >
      <div
        class="sc-ckVGcZ fRGHMA"
      >
        <span
          class="fd-token sc-jKJlTe fEwmSA"
          role="button"
        >
          random
        </span>
      </div>
    </div>
  </div>
</div>
`;
